<resources>
    <string name="app_name">e-CarOrder</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_button">Sign in with Google</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="add">Add Charge Point</string>
    <string name="notifications">Notifications</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="user_guide">User Guide</string>
    <string name="john_doe">John Doe</string>
    <string name="verified">Verified</string>
    <string name="home">Home</string>
    <string name="signOut">Sign Out</string>
    <string name="search">Search...</string>

    <string-array name="connectorsType">
        <item>Schuko</item>
        <item>Tipo 1 (SAE J1772)</item>
        <item>Tipo 2 (Mennekes)</item>
        <item>CHAdeMO</item>
        <item>CSS</item>
        <item>Tipo 3 (Scame)</item>
    </string-array>

    <string-array name="statusType">
        <item>Available</item>
        <item>Damaged</item>
        <item>Unkown</item>
    </string-array>

</resources>