<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>

    <item
        android:id="@+id/menuAdd"
        android:icon="@drawable/add"
        android:title="@string/add"/>

    <item
        android:id="@+id/menuChats"
        android:icon="@drawable/chat"
        android:title="@string/chats"/>

    <item android:title="@string/others">

        <menu>
            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/settings"
                android:title="@string/settings"/>

            <item
                android:id="@+id/menuUserGuide"
                android:icon="@drawable/about"
                android:title="@string/user_guide"/>

            <item
                android:id="@+id/menuSignOut"
                android:icon="@drawable/sign_out"
                android:title="Sign Out"/>
        </menu>

    </item>

</menu>